wallet/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wallet
  namespace: wallet
spec:
  ports:
  - port: 80
    targetPort: 4567
    protocol: TCP
  selector:
    app: wallet
