wallet/ingress-notls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wallet
  namespace: wallet
  annotations:
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  # - hosts:
  #   - echo.example.com
  #   secretName: echoserver-tls
  rules:
  - host: wallet.bitcoinpages.io
    http:
      paths:
      - path: /
        backend:
          serviceName: wallet
          servicePort: 80
